Fixed grid on mobile safari

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,20 @@
   z-index: 0;
 }
 
+.background-grid-mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("./images/desktop/bg-grid-mobile.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-attachment: scroll;
+  background-size: cover;
+  z-index: 0;
+}
+
 .App-link {
   color: #61dafb;
 }
